# ttsky-journey

./: .gitignore  Makefile  info.yaml
src/: tt_um_kolontsov_journey.sv  vga_timing.sv
test/: Makefile  tb.v  test.py
verilator/: CMakeLists.txt  tb_top.cpp
